# google-doc-backup

./: .gitignore  AGENTS.md  README.md  ROADMAP.md  download_gdocs_generate_explorer_extensions.py  download_google_doc.pyw  download_google_doc_context_menu.reg  downloaded_document.docx  extract_google_file_id.py  gdoc_download_url.py  package-lock.json  pyproject.toml  remove_context_menu.reg  requirements.txt  setup.py
docs/dev/: configuration.md
docs/dev/notes/: 2026-05-18-policy-adoption.md
docs/dev/policies/: 0003-policy-adoption-feedback-loop.md  0010-validation-and-handoff.md
